--- a/Desktop/Website/package.json
+++ b/Desktop/Website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^15.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
@@ -16,7 +17,6 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.5",
-    "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
